# Fundamental-Computer-vision-Practice

./: .gitignore  README.md  pyproject.toml
Assignment2/: HOG.py  SIFT.py  evaluate_hog.py  evaluate_sift.py  feature_extraction.py  load_and_split.py  readme.txt
Assignment4/: main.py
Assignment4/lightning_logs/version_0/: metrics.csv
Assignment4/lightning_logs/version_11/: metrics.csv
Assignment4/lightning_logs/version_13/: metrics.csv
Assignment4/lightning_logs/version_14/: metrics.csv
Assignment4/lightning_logs/version_15/: metrics.csv
Assignment4/lightning_logs/version_17/: metrics.csv
Assignment4/lightning_logs/version_2/: metrics.csv
Assignment4/lightning_logs/version_22/: metrics.csv
Assignment4/lightning_logs/version_23/: metrics.csv
Assignment4/lightning_logs/version_24/: metrics.csv
Assignment4/lightning_logs/version_25/: metrics.csv
Assignment4/lightning_logs/version_3/: metrics.csv
Assignment4/lightning_logs/version_4/: metrics.csv
Assignment4/lightning_logs/version_6/: metrics.csv
Assignment4/lightning_logs/version_7/: metrics.csv
Tracking/: KalFilter.py  MotionDetector.py  readme.md  tracking.py
Week 2/: color_space_test.py  color_space_testNaive.py  create_img_pyramid.py  img_transforms.py  readme.md
Week1/: main.py
