[project]
name = "baseenv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lightning>=2.5.2",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pyside6>=6.9.1",
    "pytorch-lightning>=2.5.2",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.6.1",
    "scikit-video>=1.1.11",
    "torch",
    "torchaudio",
    "torchmetrics",
    "torchvision",
    "tqdm>=4.67.1",
]


[tool.uv.sources]
cu129 = { url = "https://download.pytorch.org/whl/nightly/cu129" }
